--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <script scr="https://code.jquery.com/jquery-2.1.3.min.js"></script>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css?family=Nunito&display=swap" rel="stylesheet">
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <title>Sushi Restaurant</title>
     <style>
@@ -21,6 +24,23 @@
             top:50%;
             position:relative   ;
         }
+        .fa-facebook-f{
+            color: black;
+            font-size: 45px;
+            /* background: #000; */
+            padding: 15px;
+            /* border-radius: 30px; */
+            float:right; 
+            right: 30px;
+            position:relative ;
+        }
+        .fa-instagram{
+            font-size: 50px;
+            padding: 15px;
+            float:right; 
+            right: 30px;
+            position:relative ;
+        }
         .container-story {
             background-color:red;
         }
@@ -37,48 +57,115 @@
 
         }
         .container-col-menu {
-            background-color:grey;
+            background-color:white;
             height:800px;
         }
+        
         .col {
             border:1px solid black;
         }
+        a{
+            position: relative; 
+            display: block; 
+        }
+        li{
+            display:list-item; 
+        }
+        #sidebar{
+            position:fixed;
+            width:200px;
+            height:100%;
+            /* background-color: ; */
+            left:-200px;
+
+            bottom:-20px;
+            transition:all 500ms linear;
+        }
+        #sidebar.active{
+            left:0px;
+        }
+        #sidebar ul li{
+            color: black;
+            list-style:none;
+            padding:15px 10px;
+            border-bottom:1px solid rgba(100,100,100,0.3);
+        }
+        #sidebar .toggle-btn{
+            position:absolute;
+            left:230px;
+            top:20px;
+        }
+        #sidebar .toggle-btn span{
+            display:block;
+            width:30px;
+            height:5px;
+            background: #151719;
+            margin:5px 0px;
+        }
+        #map{
+            width: 100%; 
+            height: 200px;
+        }
         
     </style>
+    <script>
+        function toggleSidebar(){
+        document.getElementById("sidebar").classList.toggle('active');
+        }
+    </script>
 </head>
 <body>
-    <div class="container-title">
-        <h1 class='logo'>restaurant name</h1>
-    </div>
+        <div id="sidebar">
+                <div class="toggle-btn" onclick="toggleSidebar()">
+              <span></span>
+              <span></span>
+              <span></span> 
+              </div>
+              <ul class="nav flex-column">
+                    <li class="nav-item ">
+                       <a class="nav-link text-dark" href="#"> Home</a>
+                   </li>
+                   <li class="nav-item text-dark">
+                       <a class="nav-link text-dark" href="#"> About us</a>
+                   </li>
+                   <li class="nav-item">
+                       <a class="nav-link text-dark" href="#"> Menu</a>
+                   </li>
+               </ul>
+              </div>
+              <div class="container-title">
+                    <h1 class='logo'>restaurant name</h1>
+                    <i class="fab fa-facebook-f"></i>
+                    <i class="fab fa-instagram"></i>
+                </div>
     <!-- first row of OUR STORY -->
     <div class="row">
-        <div class="col">
+        <div class="d-none d-sm-block col-md-2">
             1 of 3
         </div>
-        <div class="col-7 col">
+        <div class="col-md-8">
             <div class="row">
-                <div class="col">
-
+                <div class="col-sm-12 col-md-6">
                     <img class="sushi-image" src="https://nwatravelguide.com/wp-content/uploads/2016/11/nwa-sushi.jpg" alt="sushi-image">
                 </div>
-                <div class="col">
+                <div class="col-sm-12 col-md-6">
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-                        </p>
+                    </p>
                 </div>
             </div>
         </div>
-        <div class="col">
+        <div class="d-none d-sm-block col-md-2">
             3 of 3
         </div>
     </div>
     <!-- first row of GALLERY -->
     <div class="row">
-        <div class="col">
+        <div class="d-none d-sm-block col-md-2">
             1 of 3
         </div>
-        <div class="col-7 col">
+        <div class="col-md-8">
             <div class="row">
-                <div class="col">
+                <div class="d-none d-sm-block col">
                     <img class="sushi-image" src="https://img.grouponcdn.com/deal/hfefAup1zQWBE2K8sWURgS27xax/hf-846x508/v1/c700x420.jpg" alt="#">
                 </div>
                 <div class="col">
@@ -89,18 +176,18 @@
                 </div>
             </div>
         </div>
-        <div class="col">
+        <div class="d-none d-sm-block col-md-2">
             3 of 3
         </div>
     </div>
     <!-- second row of GALLERY -->
     <div class="row">
-        <div class="col">
+        <div class="d-none d-sm-block col-md-2">
             1 of 3
         </div>
-        <div class="col-7 col">
+        <div class="col-md-8">
             <div class="row">
-                <div class="col">
+                    <div class="d-none d-sm-block col">
                     <img class="sushi-image" src="https://img.grouponcdn.com/deal/hfefAup1zQWBE2K8sWURgS27xax/hf-846x508/v1/c700x420.jpg" alt="#">
                 </div>
                 <div class="col">
@@ -111,41 +198,65 @@
                 </div>
             </div>
         </div>
-        <div class="col">
+        <div class="d-none d-sm-block col-md-2">
             3 of 3
         </div>
     </div>
     <!-- first row of MENU -->
     <div class="row">
-        <div class="col">
+        <div class="d-none d-sm-block col-md-2">
             1 of 3
         </div>
-        <div class="col-7 container-col-menu">
-            Menu
+        <div class="col-md-8 container-col-menu">
+                <img class="sushi-image" src="http://sticksushi.es/wp-content/uploads/2019/03/Carta-sushi.jpg" alt="#">
         </div>
-        <div class="col">
+        <div class="d-none d-sm-block col-md-2">
             3 of 3
         </div>
     </div>
     <!-- first row of LOCATION -->
     <div class="row">
-        <div class="col">
+        <div class="d-none d-sm-block col-md-2">
             1 of 3
         </div>
-        <div class="col-7">
+        <div class="col-md-7">
             <div class="row">
-                <div class="col">
-                    GOOGLE MAPS API
+                <div class="col-sm-12">   
+                        <div id="map"></div>
+                        <script>
+                            function initMap(){
+                                //map options
+                                var options ={
+                                    zoom: 5, 
+                                    center: {lat:51.1657, lng: 10.4515 } 
+                                }
+                                //new map 
+                                var map= new 
+                                google.maps.Map(document.getElementById('map'), options); 
+                                
+                                //add marker
+                                var marker = new google.maps.Marker({
+                                    position:{lat:51.1657, lng: 10.4515}, 
+                                    map:map,  
+                                })
+                            }
+                        </script>
+               
+                        
                 </div>
-                <div class="col">
+            </div>
+                <div class="col-sm-12">
                     Location and Hours
                     <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                        Call or Text 415.788.8188<br>
+                        Walk-ins of any size are always welcome!
+                        <br>
+                        Mon-Thu: 11:30am-10pm | Fri: 11:30am-11pm | Sat: 10:30am-11pm | Sun: 10:30am-10pm
                     </p>
                 </div>
             </div>
         </div>
-        <div class="col">
+        <div class="d-none d-sm-block col-md-2">
             3 of 3
         </div>
     </div>
